<resources>
    <string name="app_name">Tp2FormularioRegistro</string>
    <string name="ingrese_sus_nombre">Ingrese sus Nombre</string>
    <string name="ingrese_edad">Ingrese su edad</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="mensaje_genero_incompleto">Elija su genero</string>
    <string name="debe_aceptar_terminos_y_condiciones">Debe aceptar terminos y condiciones</string>
    <string name="mensaje_edad_invalida">Coloque una edad valida</string>
    <string name="menasaje_edad_incompleto">Complete su edad</string>
    <string name="mensaje_nombre_incompleto">Complete su nombre</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="aceptar_terminos">Aceptar terminos</string>
    <string name="enviar">ENVIAR</string>
    <string name="registro_exitoso">Registro Exitoso!</string>
    <string name="genero">Genero:</string>
</resources>