<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormularioActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_de_registro"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_sus_nombre"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_de_textos"
        android:padding="8dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="@id/titulo"
        app:layout_constraintEnd_toEndOf="@id/titulo" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_edad"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_de_textos"
        android:padding="8dp"
        android:drawableStart="@drawable/baseline_calendar_24"
        android:drawablePadding="5dp"
        android:inputType="date"
        android:maxLength="3"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintStart_toStartOf="@id/titulo"
        app:layout_constraintEnd_toEndOf="@id/titulo" />

    <RadioGroup
        android:id="@+id/genero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/caja_de_textos"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/edad"
        app:layout_constraintStart_toStartOf="@id/titulo"
        app:layout_constraintEnd_toEndOf="@id/titulo" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:textColor="@color/black"
            android:text="@string/masculino"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:textColor="@color/black"
            android:text="@string/femenino"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/otro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:textColor="@color/black"
            android:text="@string/otro"
            android:layout_marginBottom="8dp"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/terminos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aceptar_terminos"
        android:textColor="@color/black"
        android:layout_marginTop="120dp"
        android:theme="@style/AppTheme"
        app:layout_constraintTop_toBottomOf="@id/genero"
        app:layout_constraintStart_toStartOf="@id/titulo"
        app:layout_constraintEnd_toEndOf="@id/titulo" />

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/terminos"
        app:layout_constraintStart_toStartOf="@id/titulo"
        app:layout_constraintEnd_toEndOf="@id/titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>